--- a/6kyu.ipynb
+++ b/6kyu.ipynb
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'abad'"
+       "'volcano'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,8 +237,12 @@
     "        score.append(highest)\n",
     "    return words[score.index(max(score))]\n",
     "\n",
+    "# You need to return the highest scoring word as a string.\n",
     "# For example, the score of abad is 8 (1 + 2 + 1 + 4).\n",
-    "high('abad')"
+    "# 'man i need a taxi up to ubud'  -> 'taxi'\n",
+    "# 'what time are we climbing up the volcano' -> 'volcano'\n",
+    "# 'aa b', 'aa'\n",
+    "high('what time are we climbing up the volcano')"
    ]
   }
  ],
