mean without outliers

--- a/5kyu.ipynb
+++ b/5kyu.ipynb
@@ -178,6 +178,57 @@
     "\n",
     "generate_hashtag('           Codewars  is nice       ')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Mean without outliers\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def clean_mean(sample, cutoff):\n",
+    "    output = []\n",
+    "    temp_len = 1\n",
+    "    cnt = 1\n",
+    "    while (cnt != 0):\n",
+    "        cnt = 0\n",
+    "        std_dev = np.std(sample)\n",
+    "        mean = np.mean(sample)\n",
+    "        #print(std_dev)\n",
+    "        #print(mean)\n",
+    "        output.clear()\n",
+    "        for i in sample:\n",
+    "            if(abs(i - mean) < cutoff * std_dev):\n",
+    "                output.append(i)\n",
+    "            else:\n",
+    "                sample.remove(i)\n",
+    "                cnt += 1\n",
+    "        #print(sample)\n",
+    "        #print(output)\n",
+    "        #print(\"licznik\", cnt)\n",
+    "    return np.round(np.mean(output), 2)\n",
+    "\n",
+    "\n",
+    "sample = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 100]\n",
+    "cutoff = 3\n",
+    "# clean_mean(sample, cutoff) -> 5.5\n",
+    "\n",
+    "clean_mean(sample, cutoff)\n"
+   ]
   }
  ],
  "metadata": {
