--- a/7kyu.ipynb
+++ b/7kyu.ipynb
@@ -209,6 +209,54 @@
     "#\"a234\"   -->  false\n",
     "validate_pin(\"a234\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Let's fight again!\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Alphabet war\"\"\"\n",
+    "def alphabet_war(fight):\n",
+    "    left_side = {'w': 4, 'p': 3, 'b': 2, 's': 1}\n",
+    "    right_side = {'m': 4, 'q': 3, 'd': 2, 'z': 1}\n",
+    "    left_sum = 0\n",
+    "    right_sum = 0\n",
+    "    for letter in fight:\n",
+    "        left_sum += left_side.get(letter,0)\n",
+    "        right_sum += right_side.get(letter,0)\n",
+    "    # print(left_sum)\n",
+    "    # print(right_sum)\n",
+    "    if left_sum > right_sum:\n",
+    "        return \"Left side wins!\"\n",
+    "    elif right_sum > left_sum:  \n",
+    "        return \"Right side wins!\"\n",
+    "    else:\n",
+    "        return \"Let's fight again!\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# \"z\", \"Right side wins!\"\n",
+    "# \"zdqmwpbs\", \"Let's fight again!\"\n",
+    "# \"wq\", \"Left side wins!\"\n",
+    "# \"zzzzs\", \"Right side wins!\"\n",
+    "# \"wwwwww\", \"Left side wins!\"\n",
+    "\n",
+    "alphabet_war(\"zdqmwpbs\")"
+   ]
   }
  ],
  "metadata": {
