Reveresed Words / Cyclop Numbers

--- a/7kyu.ipynb
+++ b/7kyu.ipynb
@@ -257,6 +257,72 @@
     "\n",
     "alphabet_war(\"zdqmwpbs\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'world! hello'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Reversed Words\"\"\"\n",
+    "\n",
+    "def reverse_words(s):\n",
+    "    words = s.split()\n",
+    "    words.reverse()\n",
+    "    return (' '.join(words))\n",
+    "\n",
+    "# \"hello world!\" --> \"world! hello\"\n",
+    "# \"The greatest victory is that which requires no battle\" --> \"battle no requires which that is victory greatest The\"\n",
+    "s = \"hello world!\"\n",
+    "#s = \"The greatest victory is that which requires no battle\"\"\n",
+    "reverse_words(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Cyclop numbers\"\"\"\n",
+    "\n",
+    "def cyclops (n):\n",
+    "    binary = bin(n)[2:]\n",
+    "    if len(binary) % 2 == 0 or binary.count('0') > 1 or binary[len(binary) // 2] != '0':\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "#cyclops(1)  # False\n",
+    "#cyclops(5)  # True\n",
+    "#cyclops(3)  # False\n",
+    "#cyclops(11) # False\n",
+    "#cyclops(13) # False\n",
+    "#cyclops(23) # False\n",
+    "cyclops(27) # True"
+   ]
   }
  ],
  "metadata": {
