--- a/5kyu.ipynb
+++ b/5kyu.ipynb
@@ -229,6 +229,67 @@
     "\n",
     "clean_mean(sample, cutoff)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'128.32.10.1'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" int32 to IPv4 \"\"\"\n",
+    "import ipaddress\n",
+    "\n",
+    "def int32_to_ip(int32):\n",
+    "    return ipaddress.ip_address(int32).__str__()\n",
+    "\n",
+    "# 2149583361 ==> \"128.32.10.1\"\n",
+    "# 32         ==> \"0.0.0.32\"\n",
+    "# 0          ==> \"0.0.0.0\"\n",
+    "\n",
+    "int32_to_ip(2149583361)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Number of trailing zeros of N!\"\"\"\n",
+    "def zeros(n):\n",
+    "    result = 0\n",
+    "    while n != 0:\n",
+    "        result += n // 5\n",
+    "        n = n // 5\n",
+    "    return result\n",
+    "\n",
+    "# zeros(6) = 1\n",
+    "# zeros(12) = 2\n",
+    "# zeros(30) = 7\n",
+    "zeros(30)"
+   ]
   }
  ],
  "metadata": {
